Migration to virtual threads - phase 1 (#746)
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>